# nlohmann_json

./: .bazelrc  .dotstop.dot  .gitignore  MODULE.bazel  versions.json
.dotstop_extensions/: README.md  data_store.py
.github/workflows/: coverage_gate.yml  docs.yml  parent-workflow.yml  publish_documentation.yml  save_data_test.yml  test_publication.yml  ubuntu.yml
TSF/: MemoryEfficientTestResultData.db  MemoryEfficientTestResultData_2026-01-15.db  MemoryEfficientTestResultData_2026-01-16.db  README.md  TrustableScoring.db  misbehaviours.md
TSF/data_storage/: MemoryEfficientTestResultData_2026-01-21.db  TrustableScoring_2026-01-23.db
TSF/docs/: ci_failure_rate_analysis.md  third_party_tools_assessment.md
TSF/scripts/: capture_test_data_memory_sensitive.py
TSF/trustable/assertions/: TA-ANALYSIS_CONTEXT.md  TA-BEHAVIOURS_CONTEXT.md  TA-DATA_CONTEXT.md  TA-FIXES_CONTEXT.md  TA-INDICATORS_CONTEXT.md  TA-INPUTS_CONTEXT.md  TA-RELEASES_CONTEXT.md  TA-UPDATES_CONTEXT.md  TA-VALIDATION_CONTEXT.md
TSF/trustable/no-json-faults/: NJF-06.5.1.md  NJF-06.5.2.md
TSF/trustable/statements/: JLS-02.md  JLS-07.md  JLS-08.md  JLS-10.md  JLS-11.md  JLS-14.md  JLS-16.md  JLS-17.md  JLS-20.md  JLS-31.md  JLS-47.md  JLS-48.md  JLS-49.md  JLS-50.md  JLS-53.md  JLS-54.md  JLS-55.md  JLS-58.md  JLS-62.md  JLS-66.md  JLS-74.md  JLS-75.md
main/: ci_failure_rate_analysis.html  concept.html  genindex.html  index.html  list_of_test_environments.html  nlohmann_misbehaviours_comments.html  non_reproducible_tests.html  objects.inv  report.html  search.html  searchindex.js  third_party_tools_assessment.html
main/introduction/: index.html
